pelog/force-app/main/default/objects/PELog__e/PELog__e.object-meta.xml
<CustomObject>
    <description>Platform Event holding Log messages</description>
    <label>PELog</label>
    <pluralLabel>PELogs</pluralLabel>
</CustomObject>