pelog/force-app/main/default/objects/PELog__e/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Is this a business or technical event for example. This allows for different publication schemes and acts as a switch for subscribers.</description>
    <label>Category</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>