pelog/force-app/main/default/objects/PELog__e/fields/LoggingLevel__c.field-meta.xml
<CustomField>
    <fullName>LoggingLevel__c</fullName>
    <description>Salesforce Logging Level: one of:
NONE
ERROR
WARN
INFO
DEBUG
FINE
FINER
FINEST</description>
    <label>LoggingLevel</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>