pelog/force-app/main/default/objects/PELog__e/fields/msg__c.field-meta.xml
<CustomField>
    <fullName>msg__c</fullName>
    <description>Logged Message</description>
    <label>msg</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>